--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="secao01">
-        Rebeca Clarilene Vieira da Silva - TEXTOS TEXTOS TEXTOS
+        Rebeca Clarilene Vieira da Silva - TEXTOS TEXTOS TEXTOS TEXTOS TEXTOS TEXTOSTEXTOS TEXTOS TEXTOS
     </section>
     <section>
         Carliane
