realizada outra alteração na party da Andy porque faltou uma letra

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Carliane
     </section>
     <section>
-        A ANDY ALTEROU AQUI PARA TERMINAR A PARTE DELA A TAREFA!!!!!
+        A ANDY ALTEROU AQUI PARA TERMINAR A PARTE DELA NA TAREFA!!!!!
     </section>
 </body>
 </html>
