Altera texto da seção 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Rebeca Clarilene Vieira da Silva - TEXTOS TEXTOS TEXTOS TEXTOS TEXTOS TEXTOSTEXTOS TEXTOS TEXTOS
     </section>
     <section>
-        Carliane
+        Carliane Fernandes
     </section>
     <section>
         A ANDY ALTEROU AQUI PARA TERMINAR A PARTE DELA A TAREFA!!!!!
